[gd_scene load_steps=9 format=3 uid="uid://bq7jau3uxhgc3"]

[ext_resource type="Script" uid="uid://ci50itsrrqci4" path="res://scripts/client/ui/login.gd" id="1_f2pmv"]
[ext_resource type="Script" uid="uid://de80hgrgpgaji" path="res://scripts/client/ui/login_ui_handler.gd" id="1_q4i5h"]
[ext_resource type="Script" uid="uid://6wf8wm0hkcte" path="res://scripts/client/ui/realmlist_ui.gd" id="3_euaaj"]
[ext_resource type="PackedScene" uid="uid://bbpb7w7y2m6nt" path="res://scenes/ui/login/realmlist_row.tscn" id="3_q4i5h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0q610"]
bg_color = Color(0.09620472, 0.09620475, 0.09620469, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f2pmv"]
bg_color = Color(0.4117647, 0.6, 0.6, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q4i5h"]
bg_color = Color(0.48268765, 0.6761687, 0.67596257, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_euaaj"]
bg_color = Color(0.30038735, 0.46174777, 0.46192586, 1)

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_q4i5h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.0
offset_top = -29.0
offset_right = 127.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Godot MMORPG"
horizontal_alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Login"
script = ExtResource("1_f2pmv")

[node name="InfoPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = -70.0
offset_right = 166.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0q610")

[node name="MarginContainer" type="MarginContainer" parent="InfoPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="InfoPanel/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="InfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Connecting..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageLabel" type="RichTextLabel" parent="InfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
fit_content = true
horizontal_alignment = 1

[node name="Button" type="Button" parent="InfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_f2pmv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_q4i5h")
theme_override_styles/hover = SubResource("StyleBoxFlat_euaaj")
theme_override_styles/focus = SubResource("StyleBoxFlat_euaaj")
text = "Cancel"

[node name="RealmList" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = -200.0
offset_right = 166.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0q610")
script = ExtResource("3_euaaj")
character_selection = "uid://c3358qceuf7i8"

[node name="MarginContainer" type="MarginContainer" parent="RealmList"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="RealmList/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="RealmList/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Realm List"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="RealmList/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RealmsContainer" type="VBoxContainer" parent="RealmList/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RealmListRow" parent="RealmList/MarginContainer/VBoxContainer/ScrollContainer/RealmsContainer" instance=ExtResource("3_q4i5h")]
layout_mode = 2

[connection signal="on_change_state" from="." to="RealmList" method="_login_ui_state_changed"]
[connection signal="on_authenticated" from="VBoxContainer/Button" to="." method="_on_button_on_authenticated"]
[connection signal="on_failure" from="VBoxContainer/Button" to="." method="_on_button_on_failure"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="InfoPanel/MarginContainer/VBoxContainer/Button" to="." method="_on_infopanel_button_pressed"]
